--- a/gntw.html
+++ b/gntw.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/images/favicon.ico" rel="icon" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
-    <link href="/css/alertify.min.css" rel="stylesheet" />
-    <link href="/css/alertify-bootstrap.min.css" rel="stylesheet" />
+    <link href="images/favicon.ico" rel="icon" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
+    <link href="css/alertify.min.css" rel="stylesheet" />
+    <link href="css/alertify-bootstrap.min.css" rel="stylesheet" />
     <title>GNTW</title>
     <style>
       body {
@@ -65,10 +65,10 @@
 
     <div id="withdraw"></div>
 
-    <script src="/js/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/js/alertify.min.js" type="text/javascript"></script>
-    <script src="/js/web3.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/alertify.min.js" type="text/javascript"></script>
+    <script src="js/web3.min.js" type="text/javascript"></script>
     <script>
       var account, WrapperAddr, WrapperABI, Wrapper, GNTAddr, GNTABI, GNT, depositAddress;
 
@@ -212,9 +212,9 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-75000235-4', 'auto');
+      ga('create', 'UA-110060016-2', 'auto');
       ga('send', 'pageview');
     </script>
-    <script src="/js/sidecar.v1.js" async defer></script>
+    <script src="js/sidecar.v1.js" async defer></script>
   </body>
 </html>
