--- a/index.html
+++ b/index.html
@@ -1,30 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+
+	   var loc = window.location.pathname;
+       var scriptfolder = loc.substring(0, loc.lastIndexOf('/'));
+       var pathipfs = window.location.pathname.toUpperCase(); 
+
+       if (pathipfs.search("/IPFS/") > -1) {           
+         if (window.location.hostname != 'localhost') {
+            window.location = 'http://localhost:8080'+window.location.pathname; 
+         }
+       }  
+
+       function setCookie(cookie_name, cookie_value, expire_in_days) {
+               var cookie_expire = "";
+               if (expire_in_days != null) {
+	                  var expire = new Date();
+	                  expire.setTime(expire.getTime() + 1000*60*60*24*parseInt(expire_in_days));
+	                  cookie_expire = "; expires=" + expire.toGMTString();
+               }
+               document.cookie = escape(cookie_name) + "=" + escape(cookie_value) + cookie_expire;               
+       }
+
+       function getCookie(cookie_name) {
+            if (!document.cookie.match(eval("/" + escape(cookie_name) + "=/"))) { 
+                return false;
+            }
+            return unescape(document.cookie.replace(eval("/^.*?" + escape(cookie_name) + "=([^\\s;]*).*$/"), "$1"));
+       }
+
+       function selectAPI() {
+           var vCombo = document.getElementById("apiselect").value;
+           setCookie('exchangeAPIname',vCombo,10);           
+           window.location.href = window.location.origin+scriptfolder; 
+       }
+
+    </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/images/favicon.png" rel="icon" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
-    <link href="/css/alertify.min.css" rel="stylesheet" />
-    <link href="/css/alertify-bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
-    <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
-
-    <meta property="og:url" content="https://forkdelta.app" />
-    <meta property="og:title" content="ForkDelta | Decentralized Ethereum Token Exchange" />
-    <meta property="og:description" content="ForkDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://forkdelta.app/images/logo.png" />
-
-    <title>ForkDelta | Decentralized Ethereum Token Exchange</title>
-    <meta name="description" content="ForkDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta name="twitter:widgets:autoload" content="off">
+    <link href="images/favicon.png" rel="icon" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
+    <link href="css/alertify.min.css" rel="stylesheet" />
+    <link href="css/alertify-bootstrap.min.css" rel="stylesheet" />
+    <link href="css/black.css" rel="stylesheet" id="stylesheet" />
+    <link href="css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
+    <title>AGAINST DEX | Decentralized Ethereum Token Exchange</title>
+    <meta name="description" content="AGAINST DEX is a Delta decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange." />
   </head>
-
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top"> 
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -33,23 +61,25 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">
-            <img src="/images/title.png" alt="I know it's not a fork, it's a trident." />
-          </a>
+          </button>  
+          <span id="apilabel">API/Config: </span>
+          <select id="apiselect" onchange="selectAPI()">
+            <option value="AGAINST" selected class="darkitem">AGAINST</option>
+            <option value="ForkDelta" class="darkitem">ForkDelta</option>
+            <option value="EtherDelta" class="darkitem">EtherDelta</option>
+            <option value="DEFLAT" class="darkitem">DEFLAT</option>
+          </select>            
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-          	<li><a href="/about/"><i class="fa fa-info-circle"></i> About ForkDelta</a></li>
           	<li style="display: none;" class="dropdown" id="helpDropdown"></li>
             <li class="dropdown" id="tokenGuidesDropdown"></li>
             <li class="dropdown" id="connection"></li>
-            <li class="dropdown" id="languages"></li>
+            <li class="dropdown" id="languages" style="display: none;"></li>
             <li class="dropdown" id="accounts"></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -60,15 +90,7 @@
         <div class="col-md-3 no-float">
           <div class="row-container">
             <div class="row-header trn">balance</div>
-            <div id="balance"></div>
-            <div class="row-header trn">volume</div>
-            <div id="volume"></div>
-          </div>
-        </div>
-        <div class="col-md-2 no-float">
-          <div class="row-container">
-            <div class="row-header trn">order_book</div>
-            <div id="orders"></div>
+            <div class="row-balance" id="balance"></div>
             <div class="row-header trn">new_order</div>
             <div class="row-box nav-header">
               <ul class="nav nav-tabs two columns" role="tablist">
@@ -82,6 +104,12 @@
                 <div role="tabpanel" class="tab-pane" id="sell"></div>
               </div>
             </div>
+          </div>
+        </div>
+        <div id="col-orders" class="col-md-2 no-float">
+          <div class="row-container">
+            <div class="row-header trn">order_book</div>
+            <div id="orders"></div>
           </div>
         </div>
         <div class="col-md-4 no-float">
@@ -102,7 +130,6 @@
             <div class="row-header trn">my_transactions</div>
             <div class="row-box nav-header">
               <ul class="nav nav-tabs four columns" role="tablist">
-                <li role="presentation" class="active"><a href="#important" aria-controls="info" role="tab" data-toggle="tab" class="trn">important</a></li>
                 <li role="presentation"><a href="#myTrades" aria-controls="myTrades" role="tab" data-toggle="tab" class="trn">trades</a></li>
                 <li role="presentation"><a href="#myOrders" aria-controls="myOrders" role="tab" data-toggle="tab" class="trn">orders</a></li>
                 <li role="presentation"><a href="#myFunds" aria-controls="myFunds" role="tab" data-toggle="tab" class="trn">funds</a></li>
@@ -111,50 +138,15 @@
             <div class="row-box">
                 <div class="row-box height2 scroll">
                   <div class="tab-content">
-                  <div role="tabpanel" class="tab-pane active" id="important">
-                    <div style="margin: 12px;">
-                      <p>
-                        <a href="https://t.me/ForkDeltaChat" target="_blank"><img alt="Chat on Telegram" src="https://img.shields.io/badge/chat-on%20Telegram-0088cc.svg" /></a>
-                        <a href="https://discord.gg/mMnRq7m" target="_blank"><img alt="Chat on Discord" src="https://img.shields.io/badge/chat-on%20discord-7289da.svg" /></a>
-                        <a href="https://www.reddit.com/r/ForkDelta" target="_blank"><img alt="Join us on Reddit" src="https://img.shields.io/badge/reddit-ForkDelta-red.svg" /></a>
-                      </p>
-                      <p style="color: #f00; font-weight: bold;">URL & Status</p>
-                      <p style="font-size: 12px;">
-                        The URL of this project is <a href="https://forkdelta.app">forkdelta.app</a>. Bookmark it once and use the bookmark.
-                      </p>
-                      <p style="font-size: 12px;">
-                        This interface is a fork of <a href="https://etherdelta.com">EtherDelta</a> with a ton of improvements including a much faster order processing system.
-                        It interacts with ForkDelta's revamped API and EtherDelta's original contract.
-                      </p>
-                      <p style="color: #f00; font-weight: bold;">How to Start Trading</p>
-                      <p style="font-size: 12px;">
-                        <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. ForkDelta cannot help you with funds incorrectly deposited to the trading smart contract.
-                      </p>
-                      <p style="color: #f00; font-weight: bold;">ForkDelta Disclaimer</p>
-                      <p style="font-size: 12px;">
-                        ForkDelta is a decentralized trading platform that lets
-                        you trade Ether and Ethereum-based tokens directly with other users.
-                        You are responsible for your own account, funds, and private keys.
-                        You are responsible for your own trading decisions, and the details
-                        and mechanics of the tokens you trade.
-                        ForkDelta is not responsible for your decisions, actions, or losses that result from
-                        using ForkDelta. ForkDelta makes no guarantee about the tokens that you trade using
-                        ForkDelta. ForkDelta does not hold your funds and does not offer refunds.
-                        While the information contained on ForkDelta is periodically updated, no guarantee is given
-                        that the information provided on ForkDelta is correct, complete, or up-to-date.
-                        By using ForkDelta, you acknowledge this and agree to these terms.
-                      </p>
-                    </div>
-                  </div>
-                  <div role="tabpanel" class="tab-pane" id="myTrades"></div>
-                  <div role="tabpanel" class="tab-pane" id="myOrders"></div>
-                  <div role="tabpanel" class="tab-pane" id="myFunds"></div>
+                    <div role="tabpanel" class="tab-pane active" id="myTrades"></div>
+                    <div role="tabpanel" class="tab-pane" id="myOrders"></div>
+                    <div role="tabpanel" class="tab-pane" id="myFunds"></div>               
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-3 no-float">
+        <div id="trades-col" class="col-md-3 no-float">
           <div class="row-container">
             <div class="row-header">
               <span class="trn">trades</span>
@@ -162,14 +154,9 @@
             <div class="row-box height7 scroll">
               <div id="trades"></div>
             </div>
-            <div class="row-box height2 scroll">
-              <div id="updates">
-              </div>
-            </div>
         </div>
       </div>
     </div>
-
     <div id="buyTrade"></div>
     <div id="sellTrade"></div>
     <div id="importAccount"></div>
@@ -178,61 +165,45 @@
     <div id="tokenGuide"></div>
     <div id="screencast"></div>
     <div id="ledger"></div>
-
-    <script src="/js/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="/js/jquery.translate.js" type="text/javascript"></script>
-    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/js/alertify.min.js" type="text/javascript"></script>
-    <script src="/js/ejs_production.js" type="text/javascript"></script>
-    <script src="/js/chrome-u2f-api.js" type="text/javascript"></script>
-    <script src="/js/ledger.min.js" type="text/javascript"></script>
-    <script src="/js/main-unminified.js" type="text/javascript"></script>
-
+  </div>
+</div>
+<div class="row-container">
+<div id="infoSection">
+    <div id="volumeContainer">
+            <div id="header-volume" class="row-header">volume</div>
+            <div id="volume"></div>
+    </div>
+    <div id="aboutPageContainer">
+      <embed id="aboutPage" src="about/">
+      </embed>
+    </div>
+</div>    
+</div>
+    <script>
+       cookie = getCookie("exchangeAPIname");
+       if (!cookie) {
+            var apiExchange = 'AGAINST';	
+          } else {
+            var apiExchange = cookie;
+            document.getElementById("apiselect").value = apiExchange;﻿            
+       }
+       var configName = 'main-'+apiExchange;
+    </script>
+    <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery.translate.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/alertify.min.js" type="text/javascript"></script>
+    <script src="js/ejs_production.js" type="text/javascript"></script>    
+    <script src="js/ledger.min.js" type="text/javascript"></script>
+    <script src="js/main-minified.js" type="text/javascript"></script>
+    <script src="js/chrome-u2f-api.js" type="text/javascript"></script>  
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-112001937-1', 'auto');
+      ga('create', 'UA-110060016-2', 'auto');
       ga('send', 'pageview');
     </script>
-
-    <script>window.twttr = (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0],
-        t = window.twttr || {};
-      if (d.getElementById(id)) return t;
-      js = d.createElement(s);
-      js.id = id;
-      js.src = "https://platform.twitter.com/widgets.js";
-      fjs.parentNode.insertBefore(js, fjs);
-
-      t._e = [];
-      t.ready = function(f) {
-        t._e.push(f);
-      };
-
-      return t;
-      }(document, "script", "twitter-wjs"));
-    </script>
-
-    <script>
-      function embedTwitter(theme) {
-        $('.twitter-timeline').remove();
-        twttr.widgets.createTimeline(
-          {
-            sourceType: 'profile',
-            screenName: 'ForkDelta'
-          },
-          document.getElementById('updates'),
-          {
-            theme: theme,
-            chrome: 'transparent'
-          }
-        )
-      }
-      twttr.ready(function () {
-        embedTwitter('dark')
-      })
-    </script>
-  </body>
+</body>
 </html>
