--- a/trades.html
+++ b/trades.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/images/favicon.ico" rel="icon" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
-    <link href="/css/trades.css" rel="stylesheet" id="stylesheet" />
-    <title>ForkDelta</title>
+    <link href="images/favicon.png" rel="icon" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
+    <link href="css/trades.css" rel="stylesheet" id="stylesheet" />
+    <title>DEFLAT DEX</title>
   </head>
 
   <body>
@@ -24,9 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">
-            <img src="/images/title.png" />
-          </a>
+            <img src="images/logo.png" />
         </div>
       </div><!-- /.container-fluid -->
     </nav>
@@ -39,12 +37,12 @@
       <div id="trades_list"></div>
     </div>
 
-    <script src="//www.gstatic.com/charts/loader.js" type="text/javascript"></script>
+    <script src="js/loader.js" type="text/javascript"></script>
     <script>google.charts.load('current', {packages: ['corechart', 'line']});</script>
-    <script src="/js/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/js/ejs_production.js" type="text/javascript"></script>
-    <script src="/js/trades.js" type="text/javascript"></script>
+    <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/ejs_production.js" type="text/javascript"></script>
+    <script src="js/trades.js" type="text/javascript"></script>
 
     <script type="text/javascript">
       $(() => {
@@ -72,7 +70,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-75000235-4', 'auto');
+      ga('create', 'UA-110060016-2', 'auto');
       ga('send', 'pageview');
     </script>
   </body>
