IPFS Frontend Update

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,8 @@
-<html>
-	<head>
-		
+<!DOCTYPE html>
+<html lang="en">
+	<head>		
 		<title>About AGAINST DEX | Roadmap, FAQs, and more!</title>
+         <meta charset="UTF-8"> 
 		<meta name="description" content="Learn about AGAINST DEX today! Is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange." />
 		<link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css" />
 		<script src="../js/jquery-3.3.1.min.js"></script>
@@ -234,8 +235,6 @@
 	<body>
 
 		<div class="header">
-			<a class="hash" href="#lroadmap">Roadmap</a>
-			<a class="hash" href="#ldonate">Donate</a>
 			<a class="hash" href="#lfaqs">FAQs</a>
 		</div>		
       
@@ -322,37 +321,15 @@
 				To change the default gas price, simply click the drop down in the top right of AGAINST DEX (where you previously set up your account), and click "Gas Price" at the bottom of that menu. Then, you can set your gas price using the Gwei denomination.
 			</div>
 
+			<h4 class="accordion-toggle">New account and Import Private Key</h4>
+			<div class="accordion-content">
+Deprecated option, we suggest other authentication methods, such as METAMASK, NANO LEDGER or equivalent.
+			</div>
 			<h4 class="accordion-toggle">How do I use a Ledger directly with AGAINST DEX?</h4>
 			<div class="accordion-content">
 				First, you need to make sure that browser support and contract support are enabled on your Ledger. To do so, navigate to the Ethereum app on your Ledger, go into settings, and enable both browser support and contract support. Then, make sure your Ledger is connected to your computer and navigate to AGAINST DEX. Your Ledger address will appear in the account dropdown automatically, with a green "Ledger" box next to it. When you deposit, withdraw, place an order, or trade, you will have to approve the transaction on your Ledger.
 			</div>
-
-		</div>
-        <p id="lroadmap"></p>
-		<h2 style="margin-top:90px;">Possible Future Changes</h2>
-        <div>
-		<section class=timeline>
-			<div class="demo-card-wrapper">
-				<div class="demo-card">
-					<div class="head">
-						<div class="number-box">
-							<span><i class="fa fa-question"></i></span>
-						</div>
-						<h2><span class="small">TBD</span> Decentralized Order Book</h2>
-					</div>
-				</div>		    
-			</div>
-		</section>
 </div>
-<p id="ldonate"></p>
-<dif style="margin-top: 90px;">
-		<h1>Donate</h1>
-		<div class="content">
-			AGAINST DEX descends from ForkDelta inteface and EtherDelta's smart contract which allows users to trade utilizing EtherDelta's volume. However, this means that the trading fees still go to EtherDelta and ForkDelta development costs come entirely out of our pockets. If you are interested in the ForkDelta project and would like to contribute to its future, please consider donating to the Ethereum address below.<br />
-			<h4><a target="_blank" href="https://etherscan.io/address/0x4489F77FB33E194995142a872EcD85CbD6F0f193">0x4489F77FB33E194995142a872EcD85CbD6F0f193</a></h4>
-			As this is a project by the community, for the community, transactions to and from the donations address will be public and can be viewed on the blockchain. We will also keep a public ledger of how the donations are distributed. That way, donors can see exactly how their donations are helping!
-		</div>
-</div>
-		
+	
 	</body>
 </html>
